# modern-cpp-playground

./: CMakeLists.txt  Headers.h  README.md  RawStrings.cpp  UniformInit.cpp  playground.cpp
scripts/: env  run
